@@ -12,6 +12,12 @@ import org.testng.xml.XmlSuite;
 
 public class ReasonReporter implements IReporter {
 
+  private Map<String, Integer> results = Maps.newHashMap();
+
+  public Map<String, Integer> getResults() {
+    return results;
+  }
+
   private Map<String, String> skippedInfo = Maps.newHashMap();
 
   public Map<String, String> getSkippedInfo() {
@@ -24,6 +30,13 @@ public class ReasonReporter implements IReporter {
         .flatMap(suite -> suite.getResults().values().stream())
         .flatMap(suiteResult -> suiteResult.getTestContext().getSkippedTests().getAllResults().stream())
         .forEach(this::generateReport);
+
+    suites.stream()
+        .flatMap(iSuite -> iSuite.getAllInvokedMethods().stream())
+        .collect(Collectors.toList())
+        .forEach(im -> {
+          results.put(im.getTestMethod().getMethodName(), im.getTestResult().getStatus());
+    });
   }
 
   public void generateReport(ITestResult result) {
